--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,7 +2,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import "../../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
 
 * {
     margin: 0;
@@ -312,4 +312,11 @@ footer {
 
 .width-2 {
     width: calc(100% / 2 - 0.5rem);
+}
+
+
+.hover-btn {
+    z-index: 10;
+    top: 0;
+    left: 0;
 }
