--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -50,18 +50,23 @@ a {
     color: #000;
 }
 
-.card-styled {
-    width: calc(1200px / 6 - 1rem);
-}
-
-img {
-    height: calc(1200px / 6 - 1rem);
-    object-fit: cover;
-}
-
 .container-cards {
     width: 1200px;
     margin: 0 auto;
+
+    .card-styled {
+        width: calc(1200px / 6 - 0.9rem);
+
+        a {
+            color: #fff;
+        }
+
+        img {
+            width: 100%;
+            height: calc(1200px / 6 - 0.9rem);
+            object-fit: cover;
+        }
+    }
 }
 
 .gap-1-rem {
@@ -317,6 +322,15 @@ footer {
 
 .hover-btn {
     z-index: 10;
-    top: 0;
-    left: 0;
+    bottom: 3rem;
+    right: 0;
+    opacity: 0;
+
+    .card-styled:hover & {
+        opacity: 1;
+    }
+}
+
+.d-content {
+    display: contents;
 }
